PROJECT(Main_Android)
CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

GET_FILENAME_COMPONENT(SDL2_SOURCE_DIR ../../../SDL2 ABSOLUTE)
GET_FILENAME_COMPONENT(OSG_3RDPARTY_SOURCE_DIR ../../helpers/toolchain_builder ABSOLUTE)
GET_FILENAME_COMPONENT(OSG_SOURCE_DIR ../../../OpenSceneGraph ABSOLUTE)
GET_FILENAME_COMPONENT(OSGVERSE_SOURCE_DIR ../.. ABSOLUTE)
SET(SDL2_BUILD_DIR ../../build/sdl2_android)
SET(OSG_3RDPARTY_BUILD_DIR ../../build/3rdparty_android)
SET(OSG_BUILD_DIR ../../build/osg_android)
SET(OSGVERSE_BUILD_DIR ../../build/verse_android)

# Build main bridge library
FIND_LIBRARY(ANDROID_LOG_LIB log)
INCLUDE_DIRECTORIES(${SDL2_SOURCE_DIR}/include)
ADD_LIBRARY(osgVerseAndroid SHARED src/SDL_android_main.c src/main.cpp)
TARGET_LINK_LIBRARIES(osgVerseAndroid SDL2 OpenThreads osg osgDB osgUtil ${ANDROID_LOG_LIB})
