PROJECT(OpenSceneGraph_Android)
CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

GET_FILENAME_COMPONENT(OSG_SOURCE_DIR ../../../OpenSceneGraph ABSOLUTE)
GET_FILENAME_COMPONENT(OSG_BUILD_DIR ../../build/osg_android ABSOLUTE)

SET(BUILD_OSG_APPLICATIONS OFF CACHE BOOL "Do not build applications")
SET(EGL_LIBRARY "GL" CACHE STRING "Suppress linkage error")
#SET(OPENGL_PROFILE "GLES2" CACHE STRING "OpenGL Profile to use")
SET(OSG_GL1_AVAILABLE OFF CACHE BOOL "Unavailable under Android")
SET(OSG_GL2_AVAILABLE OFF CACHE BOOL "Unavailable under Android")
#SET(OSG_GLES2_AVAILABLE ON CACHE BOOL "GLES2 is what Android uses")
#SET(OSG_GLES3_AVAILABLE ON CACHE BOOL "GLES3 is what Android uses")
SET(OSG_WINDOWING_SYSTEM "None" CACHE STRING "Unavailable under Android")
SET(OSG_FIND_3RD_PARTY_DEPS OFF CACHE BOOL "Disable for searching dependencies in ./3rdparty")
SET(DYNAMIC_OPENTHREADS OFF CACHE BOOL "Link OpenThreads statically")
SET(DYNAMIC_OPENSCENEGRAPH OFF CACHE BOOL "Link OpenSceneGraph statically")
SET(_OPENTHREADS_ATOMIC_USE_GCC_BUILTINS_EXITCODE "0" CACHE STRING "Prevent cfg error")
SET(CMAKE_RELWITHDEBINFO_POSTFIX "" CACHE STRING "add a postfix, usually empty on windows")

# Build 3rd-parties and OSG core libraries
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${OSG_BUILD_DIR}/bin/${CMAKE_BUILD_TYPE}/${CMAKE_ANDROID_ARCH_ABI}" CACHE STRING "")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${OSG_BUILD_DIR}/lib/${CMAKE_BUILD_TYPE}/${CMAKE_ANDROID_ARCH_ABI}" CACHE STRING "")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${OSG_BUILD_DIR}/lib/${CMAKE_BUILD_TYPE}/${CMAKE_ANDROID_ARCH_ABI}" CACHE STRING "")
SET(OUTPUT_BINDIR "${OSG_BUILD_DIR}/bin/${CMAKE_BUILD_TYPE}/${CMAKE_ANDROID_ARCH_ABI}" CACHE STRING "Output folder")
SET(OUTPUT_LIBDIR "${OSG_BUILD_DIR}/lib/${CMAKE_BUILD_TYPE}/${CMAKE_ANDROID_ARCH_ABI}" CACHE STRING "Output folder")

#FILE(MAKE_DIRECTORY ${OSG_BUILD_DIR})
ADD_SUBDIRECTORY(${OSG_SOURCE_DIR} ${OSG_BUILD_DIR})
