PROJECT(osgVerse_Android)
CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

GET_FILENAME_COMPONENT(SDL2_SOURCE_DIR ../../../SDL2 ABSOLUTE)
GET_FILENAME_COMPONENT(SDL2_BUILD_DIR ../../build/sdl2_android ABSOLUTE)
GET_FILENAME_COMPONENT(OSG_SOURCE_DIR ../../../OpenSceneGraph ABSOLUTE)
GET_FILENAME_COMPONENT(OSG_BUILD_DIR ../../build/osg_android ABSOLUTE)
GET_FILENAME_COMPONENT(OSGVERSE_SOURCE_DIR ../.. ABSOLUTE)
GET_FILENAME_COMPONENT(OSGVERSE_BUILD_DIR ../../build/verse_android ABSOLUTE)

SET(OSG_INCLUDE_DIR "${OSG_SOURCE_DIR}/include" CACHE STRING "OSG include directory")
SET(OSG_BUILD_INCLUDE_DIR "${OSG_BUILD_DIR}/include" CACHE STRING "OSG build include directory")
SET(OSG_LIB_DIR "${OSG_BUILD_DIR}/lib/${CMAKE_BUILD_TYPE}/${CMAKE_ANDROID_ARCH_ABI}" CACHE STRING "OSG library directory")
SET(OPENGL_gl_LIBRARY GLESv2 CACHE STRING "Use the GLES alternative")
SET(EXTERNAL_LIBRARIES EGL SDL2 CACHE STRING "External libraries to be used")
SET(VERSE_BUILD_3RDPARTIES OFF CACHE BOOL "Option to turn off 3rdparty building")
SET(VERSE_USE_OSG_STATIC ON CACHE BOOL "Option to turn on static building of OSG")
SET(VERSE_STATIC_BUILD ON CACHE BOOL "Option to turn on static building")
SET(VERSE_USE_EXTERNAL_GLES3 ON CACHE BOOL "Force GLES3 building")
SET(SDL2_FOUND ON CACHE BOOL "Enable SDL supports")
SET(SDL2_INCLUDE_DIR "${SDL2_SOURCE_DIR}/include" CACHE STRING "Enable SDL supports")
SET(SDL2_LIB_DIR "${SDL2_BUILD_DIR}/lib/${CMAKE_BUILD_TYPE}/${CMAKE_ANDROID_ARCH_ABI}" CACHE STRING "Enable SDL supports")

# Build osgVerse libraries
LINK_DIRECTORIES("${OSG_3RDPARTY_BUILD_DIR}/lib/${CMAKE_BUILD_TYPE}/${CMAKE_ANDROID_ARCH_ABI}"
                 "${OSG_BUILD_DIR}/lib" "${SDL2_INCLUDE_DIR}")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${OSGVERSE_BUILD_DIR}/bin/${CMAKE_BUILD_TYPE}/${CMAKE_ANDROID_ARCH_ABI}")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${OSGVERSE_BUILD_DIR}/lib/${CMAKE_BUILD_TYPE}/${CMAKE_ANDROID_ARCH_ABI}")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${OSGVERSE_BUILD_DIR}/lib/${CMAKE_BUILD_TYPE}/${CMAKE_ANDROID_ARCH_ABI}")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-but-set-variable")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-but-set-variable")
ADD_DEFINITIONS(-DVERSE_NO_NEON -DEIGEN_DONT_VECTORIZE -DZSTD_NO_INTRINSICS  # Disabled NEON on Android r28 to avoid errors
                -DMESHOPTIMIZER_NO_SIMD -DMA_NO_NEON -DMA_DR_FLAC_NO_NEON -DSDL_DISABLE_ARM_NEON_H)
#FILE(MAKE_DIRECTORY ${OSGVERSE_BUILD_DIR})
ADD_SUBDIRECTORY(${OSGVERSE_SOURCE_DIR} ${OSGVERSE_BUILD_DIR})
