PROJECT(SDL2_Android)
CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

GET_FILENAME_COMPONENT(SDL2_SOURCE_DIR ../../../SDL2 ABSOLUTE)
SET(SDL2_BUILD_DIR ../../build/sdl2_android)
#FILE(MAKE_DIRECTORY ${SDL2_BUILD_DIR})

SET(SDL2_DISABLE_INSTALL ON CACHE BOOL "Disable installation of SDL2")
SET(SDL2_DISABLE_UNINSTALL ON CACHE BOOL "Disable uninstallation of SDL2")
SET(SDL_SHARED OFF CACHE BOOL "Build a shared version of the library")
SET(SDL_STATIC ON CACHE BOOL "Build a static version of the library")
ADD_SUBDIRECTORY(${SDL2_SOURCE_DIR} ${SDL2_BUILD_DIR})
