SET(EXE_NAME osgVerse_ViewerGLES)
SET(EXECUTABLE_FILES
    sdl_viewer_main.cpp
)

IF(SDL2_FOUND)

    INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR})
    LINK_DIRECTORIES(${SDL2_LIB_DIR})
    NEW_EXECUTABLE(${EXE_NAME} SHARED)

    SET_PROPERTY(TARGET ${EXE_NAME} PROPERTY FOLDER "APPLICATIONS")
    TARGET_LINK_LIBRARIES(${EXE_NAME} SDL2 SDL2main osgVerseDependency osgVerseReaderWriter osgVersePipeline)
    LINK_OSG_LIBRARY(${EXE_NAME} OpenThreads osg osgDB osgUtil osgGA osgText osgSim osgTerrain osgViewer)
    TARGET_COMPILE_OPTIONS(${EXE_NAME} PUBLIC -D_SCL_SECURE_NO_WARNINGS)

ENDIF(SDL2_FOUND)
